changed the icons to phosphor icons

--- a/templates/home.html
+++ b/templates/home.html
@@ -12,6 +12,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+    <!-- Phosphor Icons -->
+    <script src="https://unpkg.com/@phosphor-icons/web"></script>
 </head>
 <body>
 <header class="tl-header">
@@ -72,7 +75,7 @@
                         <span class="tl-metric-sub">UIUC courses mapped</span>
                     </div>
                     <div>
-                        <span class="tl-metric-main">4.9★</span>
+                        <span class="tl-metric-main">4.9<i class="ph ph-star"></i></span>
                         <span class="tl-metric-sub">student rating</span>
                     </div>
                 </div>
@@ -111,7 +114,7 @@
                     <div class="tl-progress-block">
                         <div class="tl-progress-label">
                             <span>Daily streak</span>
-                            <span>5 days 🔥</span>
+                            <span>5 days <i class="ph ph-fire"></i></span>
                         </div>
                         <div class="tl-progress-bar">
                             <div class="tl-progress-fill"></div>
